syntax = "proto3";

package controller.api.resources.secrets.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/resources/secrets;secrets";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";


message Secret {

	string id = 10;

    string name = 20;

    string manager = 30;

	string scope_id = 40 [json_name="scope_id"];

    string code = 50 [json_name="code"];

	// Output only. The time this resource was created.
	google.protobuf.Timestamp created_time = 70 [json_name="created_time"];

	// Output only. The time this resource was last updated.
	google.protobuf.Timestamp updated_time = 80 [json_name="updated_time"];
}

message SecretSession {
	string id = 10;

    string scope_id = 20 [json_name="scope_id"];

	string user_id = 30 [json_name="user_id"];

    string description = 40;

    uint32 requested_time = 50 [json_name="requested_time"];

    string secret_id = 60 [json_name="secret_id"];

	// Output only. The time this resource was created.
	google.protobuf.Timestamp created_time = 70 [json_name="created_time"];

	// Output only. The time this resource was last updated.
	google.protobuf.Timestamp updated_time = 80 [json_name="updated_time"];

}


message SecretSessionLog {
	// Output only. The session log ID
	string id = 10;

	// Output only. The output of execution
    string output = 60;

	// Output only. The time this resource was created.
	google.protobuf.Timestamp created_time = 70 [json_name="created_time"];

}