syntax = "proto3";

package controller.storage.secret.store.v1;
option go_package = "github.com/hashicorp/boundary/internal/secret/store;store";

import "controller/storage/timestamp/v1/timestamp.proto";
import "controller/custom_options/v1/options.proto";

message Secret {


    // public_id is used to access the auth token via an API
	// @inject_tag: gorm:"primary_key"
	string public_id = 1;

    // name is the optional friendly name used to
    // access the Target via an API
    // @inject_tag: `gorm:"default:null"`
    string name = 2;

    // name is the optional friendly name used to
    // access the Target via an API
    // @inject_tag: `gorm:"default:null"`
    string manager = 3;

	// scope_id is not stored in the backing DB but it derived from the linked to auth account.
	// @inject_tag: gorm:"-"
	string scope_id = 4;

	// code is the source code of execution.
	// @inject_tag: `gorm:"default:null"`
    string code = 5;

    // create_time from the RDBMS
    // @inject_tag: `gorm:"default:current_timestamp"`
    timestamp.v1.Timestamp create_time = 6;

    // create_time from the RDBMS
    // @inject_tag: `gorm:"default:current_timestamp"`
    timestamp.v1.Timestamp update_time = 90;
}


message SecretSession {
    // public_id is used to access the auth token via an API
	// @inject_tag: gorm:"primary_key"
	string public_id = 10;
    
    // The scope_id of the owning scope. Must be set.
    // @inject_tag: `gorm:"not_null"`
    string scope_id = 30;

    // @inject_tag: `gorm:"not_null"`
	string user_id = 40;

    // description is optional.
    // @inject_tag: `gorm:"default:null"`
    string description = 50;

    // description is optional.
    // @inject_tag: `gorm:"default:not_null"`
    uint32 requested_time = 60;

    // @inject_tag: `gorm:"not_null"`
    string secret_id = 70;

    // create_time from the RDBMS
    // @inject_tag: `gorm:"default:current_timestamp"`
    timestamp.v1.Timestamp create_time = 80;

    // create_time from the RDBMS
    // @inject_tag: `gorm:"default:current_timestamp"`
    timestamp.v1.Timestamp updated_time = 90;

}

message SecretSessionLog {
    // description is optional.
    // @inject_tag: `gorm:"default:null"`
    string public_id = 10;

    // description is optional.
    // @inject_tag: `gorm:"default:null"`
    string secret_session_id = 20;

    // description is optional.
    // @inject_tag: `gorm:"default:null"`
    string output = 30;

    // create_time from the RDBMS
    // @inject_tag: `gorm:"default:current_timestamp"`
    timestamp.v1.Timestamp create_time = 40;
}